--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ theme: jekyll-theme-minimal
 title: Robert Viramontes
 description: PhD Student @ UW-Madison
 google_analytics: G-6F5EPCH01P
+logo: /assets/profile.png
